jsoup changelog

*** Release 1.2.3 [PENDING]
 * Now automatically detects the encoding character set when parsing HTML from a File or URL. The parser checks
   the content-type header, then the <meta http-equiv> or <meta charset> tag, and finally falls back to UTF-8.

 * Changed DT & DD tags to block-mode tags, to follow practise over spec

*** Release 1.2.2 [2010-Jul-11]
 
 * Performance optimisation:
    - core HTML parser engine now 3.5 times faster
    - HTML generator now 2.5 times faster
    - much lower memory use and garbage collection time
    
 * Added support for :matches(regex) selector, to find elements containing text matching regular expression
 
 * Added support for [key~=regex] attribute selector, to find elements with attribute values matching regular expression

 * Upgraded the selector query parser to allow nested selectors like 'div:has(p:matches(regex))'

*** Release 1.2.1 [2010-Jun-21]
 * Added .before(html) and .after(html) methods to Element and Elements, to insert sibling HTML
 
 * Added :contains(text) selector, to search for elements containing the specified text

 * Added :has(selector) pseudo-selector
     <http://github.com/jhy/jsoup/issues/issue/20>

 * Added Element#parents and Elements#parents to retrieve an element's ancestor chain
     <http://github.com/jhy/jsoup/issues/issue/20>

 * Fixes an issue where appending / prepending rows to a table (or  to similar implicit
    element structures) would create a redundant wrapping elements
       <http://github.com/jhy/jsoup/issues/issue/21>

 * Improved implicit close tag heuristic detection when parsing malformed HTML

 * Fixes an issue where text content after a script (or other data-node) was
     incorrectly added to the data node.
       <http://github.com/jhy/jsoup/issues/issue/22>

 * Fixes an issue where text order was incorrect when parsing pre-document
    HTML.
      <http://github.com/jhy/jsoup/issues/issue/23>

*** Release 1.1.1 [2010-Jun-08]